tests/sksl/errors/golden/ArrayTooManyDimensions.glsl
### Compilation failed:

error: 1: array has too many dimensions
1 error
